# Huffman_Data_Compression

./: .gitignore  .gitmodules  README.md
GUI/: GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  testread.txt  workarea.cpp  workarea.h  workarea.ui  workareaalternative.cpp  workareaalternative.h  workareaalternative.ui
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DecompressedText.txt  IO_Test_data.txt  Main_Test.cpp  Makefile  binary_in.cpp  binary_in.h  binary_out.cpp  cmake_install.cmake  huffman.cpp  huffman.h  main.cpp
src/IO_Test/: CMakeCache.txt  Huffman  IO_Test  Makefile  cmake_install.cmake
src/huffman/: binary_in.cpp  binary_out.cpp  binary_out.h  huffman.cpp
src/huffman/Huffman_Test/Test1/: Transcript.txt  test.cpp
src/huffman/Huffman_Test/Test2/: test.cpp
src/huffman/Huffman_Test/Test3/: test.cpp
testing/: CMakeLists.txt  test.cpp
